--- a/insert.html
+++ b/insert.html
@@ -193,7 +193,7 @@
   </style>
 </head>
 <body>
-  <video id="background-video" autoplay loop muted playsinline>
+  <video id="background-video" autoplay loop  playsinline>
     <source src="back.mp4" type="video/mp4">
   </video>
 
