--- a/insert.html
+++ b/insert.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Video Blend Text Effect</title>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -190,10 +191,55 @@
                   translateY(calc(-2px * var(--vibrate-intensity)));
       }
     }
+
+    /* Recording Controls Styles */
+    .record-controls {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .record-button {
+      background: #ff4444;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    .record-button:hover {
+      background: #ff2222;
+    }
+
+    .record-button.recording {
+      background: #444;
+      animation: pulse 2s infinite;
+    }
+
+    .record-progress {
+      color: white;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 8px;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    @keyframes pulse {
+      0% { opacity: 1; }
+      50% { opacity: 0.5; }
+      100% { opacity: 1; }
+    }
   </style>
 </head>
 <body>
-  <video id="background-video" autoplay loop  playsinline>
+  <video id="background-video" autoplay loop playsinline>
     <source src="back.mp4" type="video/mp4">
   </video>
 
@@ -207,6 +253,7 @@
   </div>
 
   <div class="controls">
+    <!-- Existing controls stay the same -->
     <div class="control-group">
       <h3>Blend Settings</h3>
       <label for="text-blend">Blend Mode:</label>
@@ -288,7 +335,17 @@
     <div class="vibration">BAR OOST</div>
   </div>
 
+  <div class="record-controls">
+    <button id="recordButton" class="record-button">
+      Start Recording
+    </button>
+    <div id="recordProgress" class="record-progress" style="display: none;">
+      Recording: <span id="recordTime">0</span>s
+    </div>
+  </div>
+
   <script>
+    // Existing script content stays the same until the end
     const video = document.getElementById('background-video');
     const textBlendSelect = document.getElementById('text-blend');
     const hueRotateSlider = document.getElementById('hue-rotate');
@@ -452,6 +509,125 @@
         shortcutHint.classList.remove('visible');
       }, 3000);
     }, 1000);
+
+    // Recording functionality
+    const recordButton = document.getElementById('recordButton');
+    const recordProgress = document.getElementById('recordProgress');
+    const recordTime = document.getElementById('recordTime');
+    let mediaRecorder = null;
+    let recordedChunks = [];
+    let recordingInterval = null;
+    let recordingTime = 0;
+    const MAX_RECORDING_TIME = 30; // Maximum recording time in seconds
+
+    async function captureStream() {
+        const videoElement = document.getElementById('background-video');
+        const mainContainer = document.documentElement;
+
+        const canvas = document.createElement('canvas');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        const ctx = canvas.getContext('2d');
+
+        async function drawFrame() {
+            // Draw video
+            ctx.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
+
+            // Draw the rest of the page content
+            const elements = await html2canvas(mainContainer, {
+                backgroundColor: null,
+                logging: false,
+                ignoreElements: (element) => {
+                    return element.classList.contains('record-controls') ||
+                           element.classList.contains('controls') ||
+                           element.classList.contains('toggle-controls');
+                }
+            });
+            ctx.drawImage(elements, 0, 0);
+        }
+
+        await drawFrame(); // Initial frame
+        const stream = canvas.captureStream(30); // 30 FPS
+
+        function animateFrame() {
+            if (mediaRecorder && mediaRecorder.state === 'recording') {
+                drawFrame().then(() => {
+                    requestAnimationFrame(animateFrame);
+                });
+            }
+        }
+
+        requestAnimationFrame(animateFrame);
+
+        return stream;
+    }
+
+    async function startRecording() {
+        try {
+            const stream = await captureStream();
+            recordedChunks = [];
+
+            mediaRecorder = new MediaRecorder(stream, {
+                mimeType: 'video/webm;codecs=vp8,opus',
+                videoBitsPerSecond: 5000000 // 5 Mbps
+            });
+
+            mediaRecorder.ondataavailable = (event) => {
+                if (event.data.size > 0) {
+                    recordedChunks.push(event.data);
+                }
+            };
+
+            mediaRecorder.onstop = () => {
+                const blob = new Blob(recordedChunks, { type: 'video/webm' });
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = `video-blend-${Date.now()}.webm`;
+                a.click();
+                URL.revokeObjectURL(url);
+            };
+
+            // Start recording
+            mediaRecorder.start(1000); // Capture chunks every second
+            recordButton.textContent = 'Stop Recording';
+            recordButton.classList.add('recording');
+            recordProgress.style.display = 'block';
+            recordingTime = 0;
+
+            // Update recording time
+            recordingInterval = setInterval(() => {
+                recordingTime++;
+                recordTime.textContent = recordingTime;
+                if (recordingTime >= MAX_RECORDING_TIME) {
+                    stopRecording();
+                }
+            }, 1000);
+
+        } catch (error) {
+            console.error('Error starting recording:', error);
+            alert('Failed to start recording: ' + error.message);
+        }
+    }
+
+    function stopRecording() {
+        if (mediaRecorder && mediaRecorder.state !== 'inactive') {
+            mediaRecorder.stop();
+            clearInterval(recordingInterval);
+            recordButton.textContent = 'Start Recording';
+            recordButton.classList.remove('recording');
+            recordProgress.style.display = 'none';
+        }
+    }
+
+    // Add recording event listener
+    recordButton.addEventListener('click', () => {
+        if (mediaRecorder && mediaRecorder.state !== 'inactive') {
+            stopRecording();
+        } else {
+            startRecording();
+        }
+    });
   </script>
 </body>
 </html>
