--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Video Blend Text Effect</title>
+  <meta name="description" content="Create customizable text effects with vibration and animation over video backgrounds">
+  <meta name="theme-color" content="#000000">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="VidBlend">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="manifest" href="<%= BASE_URL %>manifest.json">
+  <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.svg">
 </head>
 <body>
   <noscript>
