Update settings and default recording format
Added 'Skill(brainstorming)' to allowed skills in settings.local.json. Changed the default selected recording format in win98/index.html from 'Stories/Reels' to 'Square'.

--- a/win98/index.html
+++ b/win98/index.html
@@ -750,10 +750,10 @@
                 <div class="setting-item">
                     <label class="setting-label">Recording Format:</label>
                     <select class="setting-select" id="format-select">
-                        <option value="square">Square (1:1) - 1080x1080</option>
+                        <option value="square" selected>Square (1:1) - 1080x1080</option>
                         <option value="portrait">Portrait (4:5) - 1080x1350</option>
                         <option value="landscape">Landscape (1.91:1) - 1080x566</option>
-                        <option value="reels" selected>Stories/Reels (9:16) - 1080x1920</option>
+                        <option value="reels" >Stories/Reels (9:16) - 1080x1920</option>
                     </select>
                 </div>
                 <div class="setting-item">
