Add new Win98 videos and help-book icons
Added 'insert_vibe' and 'het_bos_vibe' video files and integrated them into the Win98 desktop with custom help-book style icons. Updated event and lineup info in index.html, improved video player logic to handle play state, and ensured only one video plays at a time. Also updated video assets and styles for new icons.

--- a/public/win98/index.html
+++ b/public/win98/index.html
@@ -700,16 +700,16 @@
             <div class="window-content" id="window-content" contenteditable="true">
                 <p><strong>PARTY INFORMATION</strong></p>
                 <br>
-                <p>Date: [YOUR DATE HERE]</p>
-                <p>Time: [YOUR TIME HERE]</p>
-                <p>Location: [YOUR LOCATION HERE]</p>
+                <p>Date: <b>30 JANUARY 2026</b></p>
+                <p>Time: <b>TBA</b></p>
+                <p>Location: <b>TRAUM</b></p>
                 <br>
                 <p>DJ Lineup:</p>
-                <p>- [DJ NAME 1]</p>
-                <p>- [DJ NAME 2]</p>
-                <p>- [DJ NAME 3]</p>
+                <p>- INSERT CREW</p>
+                <p>- BASHKKA </p>
+                <p>- DANA MONTANA feat BABU</p>
                 <br>
-                <p>Tickets: [TICKET LINK]</p>
+                <p>*<small><small>INSERT CREW represented by sweatlana, graftak, in_constant</small></small></p>
             </div>
         </div>
 
@@ -778,7 +778,7 @@
                 <div class="close-button video-close-btn">×</div>
             </div>
             <div class="video-content">
-                <video id="video-constant" preload="metadata">
+                <video id="video-constant" preload="metadata" autoplay>
                     <source src="videos/in_constant.mp4" type="video/mp4">
                 </video>
             </div>
@@ -801,7 +801,7 @@
                 <div class="close-button video-close-btn">×</div>
             </div>
             <div class="video-content">
-                <video id="video-graftak" preload="metadata">
+                <video id="video-graftak" preload="metadata" autoplay>
                     <source src="videos/graftak.mp4" type="video/mp4">
                 </video>
             </div>
@@ -824,7 +824,7 @@
                 <div class="close-button video-close-btn">×</div>
             </div>
             <div class="video-content">
-                <video id="video-sweat" preload="metadata">
+                <video id="video-sweat" preload="metadata" autoplay>
                     <source src="videos/sweat.mp4" type="video/mp4">
                 </video>
             </div>
