--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Video Blend Text Effect</title>
+  <script>
+    (function() {
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect !== location.href) {
+        history.replaceState(null, null, redirect);
+      } else {
+        var l = window.location;
+        if (l.search) {
+          var q = {};
+          l.search.slice(1).split('&').forEach(function(v) {
+            var a = v.split('=');
+            q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+          });
+          if (q.p !== undefined) {
+            var path = q.p;
+            var search = q.q ? ('?' + decodeURIComponent(q.q)) : '';
+            var hash = l.hash;
+            history.replaceState(null, null, '<%= BASE_URL %>' + path.slice(1) + search + hash);
+          }
+        }
+      }
+    })();
+  </script>
   <meta name="description" content="Create customizable text effects with vibration and animation over video backgrounds">
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
